--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 29
 
     defaultConfig {
-        applicationId "com.example.android"
+        applicationId "com.github.felipehjcosta.mobilecrossplatformperfcomparison.native_android"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
