[native sample] Add working-directory to move command

--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -30,6 +30,7 @@ jobs:
 
       - name: Move google-service.json file
         run: mv ${{ steps.google_services.outputs.filePath }} app/
+        working-directory: ${{ env.working-directory }}
 
       - name: Build with Gradle
         run: ./gradlew build --console=plain
