--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app-release
-          path: ${{ env.working-directory }}/app/build/outputs/apk/release/app-release-unsigned.apk
+          path: ${{ env.working-directory }}/app/build/outputs/apk/release/app-release.apk
 
   firebase:
     name: Run Robo Tests with Firebase Test Lab
@@ -65,4 +65,4 @@ jobs:
         run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
 
       - name: Run Robo Tests in Firebase Test Lab
-        run: gcloud -q beta firebase test android run --type robo --timeout 3m --device model=walleye,version=28,locale=en_US,orientation=portrait  --app app-release/app-release-unsigned.apk
+        run: gcloud -q beta firebase test android run --type robo --timeout 3m --device model=walleye,version=28,locale=en_US,orientation=portrait  --app app-release/app-release.apk
