--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -25,11 +25,11 @@ jobs:
         id: google_services
         uses: timheuer/base64-to-file@v1.0.3
         with:
-          fileName: 'google-services.json'
+          fileName: 'native-google-services.json'
           encodedString: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       - name: Move google-service.json file
-        run: mv ${{ steps.google_services.outputs.filePath }} app/
+        run: mv ${{ steps.google_services.outputs.filePath }} app/google-services.json
         working-directory: ${{ env.working-directory }}
 
       - name: Build with Gradle
@@ -87,11 +87,11 @@ jobs:
         id: google_services
         uses: timheuer/base64-to-file@v1.0.3
         with:
-          fileName: 'google-services.json'
+          fileName: 'flutter-google-services.json'
           encodedString: ${{ secrets.GOOGLE_SERVICES_JSON }}
 
       - name: Move google-service.json file
-        run: mv ${{ steps.google_services.outputs.filePath }} android/app/
+        run: mv ${{ steps.google_services.outputs.filePath }} android/app/google-services.json
         working-directory: ${{ env.working-directory }}
 
       - name: Download Flutter Dependencies
