--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -71,7 +71,7 @@ jobs:
 
     runs-on: ubuntu-16.04
     env:
-      working-directory: ./flutter
+      working-directory: ./flutter/android
 
     steps:
       - uses: actions/checkout@v2
