Download flutter dependencies with correct working-directory

--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -96,6 +96,7 @@ jobs:
 
       - name: Download Flutter Dependencies
         run: flutter pub get
+        working-directory: ${{ env.working-directory }}
 
       - name: Build with Flutter
         run: flutter build apk
