[native sample] Fix download artifact name

--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Download app APK
         uses: actions/download-artifact@v1
         with:
-          name: app-release
+          name: native-app-release
 
       - name: Login to Google Cloud
         uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
