--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -107,3 +107,28 @@ jobs:
         with:
           name: flutter-app-release
           path: ${{ env.working-directory }}/build/app/outputs/apk/release/app-release.apk
+
+  flutter-firebase:
+    name: Run Robo Tests with Firebase Test Lab
+    needs: flutter-apk
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download app APK
+        uses: actions/download-artifact@v1
+        with:
+          name: flutter-app-release
+
+      - name: Login to Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '284.0.0'
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+
+      - name: Set current project
+        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
+
+      - name: Run Robo Tests in Firebase Test Lab
+        run: gcloud -q beta firebase test android run --type robo --timeout 3m --device model=walleye,version=28,locale=en_US,orientation=portrait  --app flutter-app-release/app-release.apk
