--- a/react-native/android/app/build.gradle
+++ b/react-native/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
-        applicationId "com.reactnative"
+        applicationId "com.github.felipehjcosta.mobilecrossplatformperfcomparison.reactnative_android"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
