--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -67,6 +67,69 @@ jobs:
       - name: Run Robo Tests in Firebase Test Lab
         run: gcloud -q beta firebase test android run --type robo --timeout 3m --device model=walleye,version=28,locale=en_US,orientation=portrait  --app native-app-release/app-release.apk
 
+  react-native-apk:
+
+    runs-on: ubuntu-16.04
+    env:
+      working-directory: ./react-native
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Create google-service.json file
+        id: google_services
+        uses: timheuer/base64-to-file@v1.0.3
+        with:
+          fileName: 'google-services.json'
+          encodedString: ${{ secrets.GOOGLE_SERVICES_JSON }}
+
+      - name: Move google-service.json file
+        run: mv ${{ steps.google_services.outputs.filePath }} app/
+        working-directory: ${{ env.working-directory }}
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Build with Gradle
+        run: cd android && ./gradlew assembleRelease --console=plain
+        working-directory: ${{ env.working-directory }}
+
+      - name: Upload app APK
+        uses: actions/upload-artifact@v1
+        with:
+          name: react-native-app-release
+          path: ${{ env.working-directory }}/android/app/build/outputs/apk/release/app-release.apk
+
+  react-native-firebase:
+    name: Run Robo Tests with Firebase Test Lab
+    needs: react-native-apk
+    runs-on: ubuntu-18.04
+
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Download app APK
+        uses: actions/download-artifact@v1
+        with:
+          name: react-native-app-release
+
+      - name: Login to Google Cloud
+        uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+        with:
+          version: '284.0.0'
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+
+      - name: Set current project
+        run: gcloud config set project ${{ secrets.FIREBASE_PROJECT_ID }}
+
+      - name: Run Robo Tests in Firebase Test Lab
+        run: gcloud -q beta firebase test android run --type robo --timeout 3m --device model=walleye,version=28,locale=en_US,orientation=portrait  --app react-native-app-release/app-release.apk
+
   flutter-apk:
 
     runs-on: ubuntu-16.04
