--- a/.github/workflows/native-android.yml
+++ b/.github/workflows/native-android.yml
@@ -101,7 +101,7 @@ jobs:
         run: yarn install
 
       - name: Build with Gradle
-        run: cd android && ./gradlew assembleRelease --console=plain
+        run: ls -la . && cd android && ./gradlew assembleRelease --console=plain
         working-directory: ${{ env.working-directory }}
 
       - name: Upload app APK
