--- a/flutter_sample/android/app/src/main/AndroidManifest.xml
+++ b/flutter_sample/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name=".MainApplication"
-        android:label="flutter_sample"
+        android:label="Flutter Android"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
