--- a/kotlin-multiplatform/app/build.gradle
+++ b/kotlin-multiplatform/app/build.gradle
@@ -24,6 +24,9 @@ android {
             minifyEnabled false
         }
     }
+    packagingOptions {
+        exclude 'META-INF/kotlinx-coroutines-core.kotlin_module'
+    }
 }
 
 dependencies {
@@ -34,29 +37,36 @@ dependencies {
 }
 
 kotlin {
-    android("android")
-    // This is for iPhone emulator
-    // Switch here to iosArm64 (or iosArm32) to build library for iPhone device
-    iosX64("ios") {
-        binaries {
-            framework()
+    targets {
+        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")  \
+                               ? presets.iosArm64 : presets.iosX64
+
+        fromPreset(iOSTarget, 'ios') {
+            binaries {
+                framework()
+            }
         }
+
+        fromPreset(presets.android, 'android')
     }
     sourceSets {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.3"
             }
         }
         commonTest {
             dependencies {
-        		implementation kotlin('test-common')
-        		implementation kotlin('test-annotations-common')
+                implementation kotlin('test-common')
+                implementation kotlin('test-annotations-common')
             }
         }
         androidMain {
             dependencies {
                 implementation kotlin('stdlib')
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
+                implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
             }
         }
         androidTest {
@@ -66,6 +76,13 @@ kotlin {
             }
         }
         iosMain {
+            dependencies {
+                implementation('org.jetbrains.kotlinx:kotlinx-coroutines-core-native') {
+                    version {
+                        strictly '1.3.3-native-mt'
+                    }
+                }
+            }
         }
         iosTest {
         }
