--- a/kotlin-multiplatform/app/build.gradle
+++ b/kotlin-multiplatform/app/build.gradle
@@ -37,23 +37,34 @@ dependencies {
 }
 
 kotlin {
-    targets {
-        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")  \
-                               ? presets.iosArm64 : presets.iosX64
-
-        fromPreset(iOSTarget, 'ios') {
-            binaries {
-                framework()
-            }
+    android()
+    def isDevice = System.getenv("SDK_NAME")?.startsWith("iphoneos") == true
+    final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")   \
+                                ? presets.getByName("iosArm64") : presets.getByName("iosX64")
+//    println(">>> iOSTarget: $iOSTarget")
+    targetFromPreset(iOSTarget, "ios") {
+        binaries {
+            framework()
         }
-
-        fromPreset(presets.android, 'android')
     }
+//    targets {
+//        final def iOSTarget = System.getenv('SDK_NAME')?.startsWith("iphoneos")  \
+//                               ? presets.iosArm64 : presets.iosX64
+//
+//        fromPreset(iOSTarget, 'ios') {
+//            binaries {
+//                framework()
+//            }
+//        }
+//
+//        fromPreset(presets.android, 'android')
+//    }
     sourceSets {
         commonMain {
             dependencies {
                 implementation kotlin('stdlib-common')
                 implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:1.3.3"
+                implementation "com.soywiz.korlibs.klock:klock:1.8.4"
             }
         }
         commonTest {
