--- a/kotlin-multiplatform/app/build.gradle
+++ b/kotlin-multiplatform/app/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId 'org.jetbrains.kotlin.mpp_app_android'
+        applicationId 'com.github.felipehjcosta.mobilecrossplatformperfcomparison.kotlinmultiplatform_android'
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
