--- a/kotlin-multiplatform/app/build.gradle
+++ b/kotlin-multiplatform/app/build.gradle
@@ -8,6 +8,8 @@ repositories {
 }
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
     compileSdkVersion 28
@@ -33,6 +35,11 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    implementation platform('com.google.firebase:firebase-bom:25.0.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-perf'
+
     androidTestImplementation 'androidx.test:runner:1.2.0'
 }
 
