--- a/react-native/ios/ReactNative.xcodeproj/xcshareddata/xcschemes/ReactNative.xcscheme
+++ b/react-native/ios/ReactNative.xcodeproj/xcshareddata/xcschemes/ReactNative.xcscheme
@@ -29,7 +29,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "React Native.app"
+               BuildableName = "ReactNative.app"
                BlueprintName = "ReactNative"
                ReferencedContainer = "container:ReactNative.xcodeproj">
             </BuildableReference>
@@ -59,7 +59,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "React Native.app"
+            BuildableName = "ReactNative.app"
             BlueprintName = "ReactNative"
             ReferencedContainer = "container:ReactNative.xcodeproj">
          </BuildableReference>
@@ -72,6 +72,16 @@
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
                BuildableName = "ReactNativeTests.xctest"
                BlueprintName = "ReactNativeTests"
+               ReferencedContainer = "container:ReactNative.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D5619DFC242C586D00665224"
+               BuildableName = "ReactNativeUITests.xctest"
+               BlueprintName = "ReactNativeUITests"
                ReferencedContainer = "container:ReactNative.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -92,7 +102,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "React Native.app"
+            BuildableName = "ReactNative.app"
             BlueprintName = "ReactNative"
             ReferencedContainer = "container:ReactNative.xcodeproj">
          </BuildableReference>
@@ -109,7 +119,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "React Native.app"
+            BuildableName = "ReactNative.app"
             BlueprintName = "ReactNative"
             ReferencedContainer = "container:ReactNative.xcodeproj">
          </BuildableReference>
