--- a/kotlin-multiplatform/app/src/main/AndroidManifest.xml
+++ b/kotlin-multiplatform/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@
           package="com.github.felipehjcosta.mobilecrossplatformperfcomparison.kotlinmultiplatform_android">
 
     <application
+            android:name=".MainApplication"
             android:allowBackup="true"
             android:label="@string/app_name"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
