--- a/native/android/app/build.gradle
+++ b/native/android/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-perf'
 
+    implementation 'com.github.felipehjcosta:app-performance-tracker-core:0.3.0'
+    implementation 'com.github.felipehjcosta:app-performance-tracker-firebase:0.3.0'
+
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
