--- a/react-native/android/app/build.gradle
+++ b/react-native/android/app/build.gradle
@@ -169,6 +169,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:25.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-perf'
+
+    implementation 'com.github.felipehjcosta:app-performance-tracker-core:0.3.0'
+    implementation 'com.github.felipehjcosta:app-performance-tracker-firebase:0.3.0'
 }
 
 // Run this once to be able to run the application with BUCK
